# GitModel

./: .gitignore  .pre-commit-config.yaml  README.md  __main__.py  bottom_up_vs_top_down.ipynb  community_structure.ipynb  main.py  measure_process_template_diffusion.ipynb  pyproject.toml  random.ipynb  requirements.txt  test_config.yaml
git-frontend/: package-lock.json  package.json
git-frontend/src/: App.css  App.js
papers/: README.md
src/: __init__.py  ast_parser.py  config.py  dynamic_import.py  fetch_repo.py  pipeline.py  repo_graph_generation.py
src/alembic/: env.py
src/backend/: config.py  database.py  memory_tree_manager.py
src/community_detection/: extract_connected_components.py
src/configs/: config1.yaml  config2.yaml
src/ml_models/: __init__.py
src/ml_models/graph_networks/: gnn_head.py  kernels.py  message_passing.py
src/ml_models/topic_modeling/: topic_model.py  umap_hdbscan_pipeline.py
src/ml_models/transformers/: category_decomposition.py  semantic_graph_context_generator.py
src/models/graph_networks/: kernels.py
src/models/transformers/: chatgpt_api_inference.py  sentence_embeddings.py
src/notebooks/: bottom_up_vs_top_down.ipynb  community_structure.ipynb  github_repo_parser.ipynb  inference_me.md
src/system_prompts/: format_system_prompts.py
text_frontend/: __main__.py
