[tool.poetry]
name = "GitModel"
version = "0.1.0"
description = "GitModel is a Python library for working with Git repositories as a database for RAG."
authors = ["Daniel Hug <danielpatrickhug@gmail.com>"]

[tool.isort]
profile = "black"
filter_files = true
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.black]
line-length = 120
target-version = ['py310']
